--- a/src/css/vegetables.css
+++ b/src/css/vegetables.css
@@ -21,7 +21,7 @@
   font-size: 14px;
   line-height: 1.3;
   color: #fbfbfb;
-  width: 335px;
+  max-width: 335px;
   margin-bottom: 40px;
 }
 
@@ -37,7 +37,7 @@
   background: #fbfbfb;
   border-radius: 40px;
   padding: 32px 26px;
-  width: 334px;
+  max-width: 334px;
   height: 379px;
 }
 
